@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.627 2006/05/25 16:26:38 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.628 2006/06/03 01:57:24 wolf31o2 Exp $
+
+  03 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/livecdfs-update.sh:
+  Fix sed on installer icons.
 
   25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is 2.0_rc46.
